Fix text alignment issues in smallest sizes

--- a/components/scss/components/forms/form.scss
+++ b/components/scss/components/forms/form.scss
@@ -1,19 +1,20 @@
 form {
-  h3 {
-    padding: 10px 0;
-  }
+    h3 {
+        padding: 10px 0;
+    }
 }
 
 .col-form-label,
 .form-control,
 .form-control-feedback {
-  @extend .font-normal;
-  padding: $form-field-padding;
+    @extend .font-normal;
+    padding: $form-field-padding;
 }
 
 .col-form-label {
-  color: $light-black;
-  text-align: right;
+    @extend .text-sm-right;
+
+    color: $light-black;
 }
 
 .form-control {
